# QuotationAnalysis

./: CMakeLists.txt  main.cpp  quotesmanager.cpp  quotesmanager.h
